<resources>
    <string name="app_name">JunemonCase</string>
    <string name="permission_not_granted">Permissions are not granted!</string>
    <string name="unggah_foto_barangmu">Unggah Foto Barangmu</string>
    <string name="unggah_tipe_handphonenya">Unggah Tipe Handphonenya</string>
    <string name="maks_ukuran_gambar_2mb">Maks ukuran gambar : 2MB</string>
    <string name="jenis_casing">Jenis Casing</string>
    <string name="kategori_casing">Kategori Casing</string>
    <string name="best_seller">Best Seller</string>
    <string name="hardcase">Hardcase</string>
    <string name="softcase">Softcase</string>
    <string name="softcrack">Softcrack</string>
    <string name="premium">Premium</string>
    <string name="premium_soft">Premium Soft</string>
    <string name="airbag">Airbag</string>
    <string name="regular">Regular</string>
    <string name="lihat_semua">Lihat Semua</string>
    <string name="pilih_kabupaten">Pilih Kabupaten</string>
    <string name="pilih_kota">Pilih Kota</string>
    <string name="pilih_tipe_case">Pilih tipe case dulu</string>
    <string name="pilih_tipe_bes_seller">Pilih tipe best seller dulu</string>
    <string name="pilih_gambar_dulu">PILIH GAMBAR DULU</string>
    <string name="snackbar_buka">BUKA</string>
    <string name="error_happen">Error Happen</string>
    <string name="order_sekarang">Order Sekarang</string>
    <string name="user_name">User Name</string>
    <string name="nomer_hp">Nomer HP</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="edit_profile_first">Lengkapi data diri dulu</string>
    <string name="login_first">Login dulu</string>
    <string name="masukan_tipe_handphone">Masukan tipe Handphone</string>
    <string name="not_null">Tidak boleh kosong</string>
    <string name="belum_ready">Belum Ready</string>
    <string name="maaf_tipe_hp_ini_belum_tersedia">Maaf tipe HP ini belum tersedia \nmohon masukan tipe HP sesuai dengan autotext</string>
    <string name="cek_tipe_hp_anda_untuk_ketersediaan_case">Cek dulu tipe HP anda untuk ketersediaan case</string>
    <string name="casing_ready_stock">Casing Ready Stock</string>
    <string name="spesifikasi_hardcase">Cetakan gambar full sampai samping warna case full sesuai gambar melindungi bagian sisi samping saja</string>
    <string name="warning_hardcase">Tidak bisa menggunakan desain transparan (Tanpa background)\nHarus ada warna background minimal putih</string>
    <string name="spesifikasi_softcase">Cetakan gambar hanya di permukaan saja warna case Random dan tidak semua bening.\nMelindungi seluruh bagian samping maupun atas dan bawah</string>
    <string name="warning_softcase">Bisa menggunakan design trasnparan (Tanpa background)</string>
    <string name="spesifikasi_softcrack">Cetakan gmbar hanya di permukaan saja warna case bening\nMelindungi seluruh bagian samping maupun atas dan bawah</string>
    <string name="warning_softcrack">Bisa menggunakan design trasnparan (Tanpa background)\nAda anti knock di setiap sudut untuk melindungi dari benturan</string>
    <string name="spesifikasi_premium">Cetakan gambar hanya di permukaan saja, melindungi bagian samping saja, warna list case hanya terdiri dari warna hitam dan putih</string>
    <string name="warning_premium">Tidak bisa menggunakan desain transparan (Tanpa background)\nHarus ada warna background minimal putih</string>
    <string name="spesifikasi_premium_soft">Cetakan gambar hanya di permukaan saja warna case bisa di pilih baik hitam,putih atau trasnparan dengan permukaan yang keras dan samping yang lentur melindungi seluruh bagian samping maupun atas bawah</string>
    <string name="user_address">User Address</string>
    <string name="user_province">User Province</string>
    <string name="user_city">User City</string>
    <string name="no_order_case">Anda belum memesan case</string>
</resources>