<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootUploadPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarUpload"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="Detail Barang">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Unggah Barang"
                android:fontFamily="@font/lato"
                android:textColor="@color/colorComment"
                android:textSize="@dimen/letter_large"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivUploadMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/spacing_medium"
                android:src="@drawable/ic_more_vert_gray" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#fcfeff"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="224dp"
                android:background="@color/colorComment">

                <ImageView
                    android:id="@+id/ivPickPhoto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:visibility="gone" />

                <ImageButton
                    android:id="@+id/btnUnggahFoto"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerInParent="true"
                    android:background="@null"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_camera_white"
                    android:text="@string/unggah_foto_barangmu"
                    android:textAllCaps="false"
                    android:textColor="@color/text_button_upload"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvInfoUpload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btnUnggahFoto"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/lato"
                    android:text="@string/maks_ukuran_gambar_2mb"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/letter_xsmall" />


            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="25dp">


                    <TextView
                        android:id="@+id/tvJenisBarang"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:fontFamily="@font/lato"
                        android:text="@string/jenis_casing"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />


                    <Spinner
                        android:id="@+id/spinnerTypeCasing"
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:layout_below="@+id/tvJenisBarang"
                        android:layout_marginTop="8dp" />

                    <LinearLayout
                        android:id="@+id/lnRadioGroupUpload"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/spinnerTypeCasing"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="24dp"
                            android:fontFamily="@font/lato"
                            android:text="@string/kategori_casing"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <RadioGroup
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="23dp"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/rbBestSeller"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="3dp"
                                android:layout_marginEnd="27dp"
                                android:layout_weight="1"
                                android:fontFamily="@font/lato"
                                android:text="@string/best_seller"
                                android:textColor="@color/colorComment" />


                            <RadioButton
                                android:id="@+id/rbNotBestSeller"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="24dp"
                                android:layout_weight="1"
                                android:fontFamily="@font/lato"
                                android:paddingEnd="30dp"
                                android:text="@string/regular"
                                android:textColor="@color/colorComment" />


                        </RadioGroup>

                    </LinearLayout>


                    <Button
                        android:id="@+id/btnUnggah"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/lnRadioGroupUpload"
                        android:layout_marginTop="40dp"
                        android:background="@drawable/button_upload_bg_blue"
                        android:fontFamily="@font/lato"
                        android:text="Unggah"
                        android:textColor="@color/color_white" />


                </RelativeLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>